# Rust-Mock

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PROXY_MODE.md  README.md  deny.toml  docker-compose.yaml  requests.http  run_tests.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
tests/: api_unit_tests.rs  integration_tests.rs
tests/fixtures/: openapi-test.json
tests/integration/: basic.rs  common.rs  http.rs  logging.rs  mod.rs  openapi.rs  proxy.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: index.css
ui/src/components/: AddEndpointForm.tsx  EndpointTable.tsx  JsonEditor.tsx  KeyValueEditor.tsx  Layout.tsx  LogTable.tsx  Sidebar.tsx  TestEndpoint.tsx
ui/src/pages/: Index.tsx  Settings.tsx
ui/src/types/: index.ts
ui/src/utils/: api.tsx
