[package]
name = "RustMock"
version = "0.2.0"
edition = "2021"

# Binary targets
[[bin]]
name = "RustMock"
path = "src/bin/server.rs"

[[bin]]
name = "mokku"
path = "src/bin/mokku.rs"

[dependencies]
# Web framework
actix-web = "4.12"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# OpenAPI
openapiv3 = "2.2"

# CLI
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
colored = "2.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
regex = "1.12"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
open = "5.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
awc = "3.8"

[dev-dependencies]
actix-rt = "2.11"
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
