[package]
name = "RustMock"
version = "0.3.1"
edition = "2021"
authors = ["Arthur Kowalsky <arthurkowalsky@users.noreply.github.com>"]
description = "Lightning-fast, lightweight API mock server with OpenAPI support and beautiful React dashboard"
license = "MIT"
repository = "https://github.com/arthurkowalsky/Rust-Mock"
homepage = "https://github.com/arthurkowalsky/Rust-Mock"
documentation = "https://github.com/arthurkowalsky/Rust-Mock#readme"
readme = "README.md"
keywords = ["mock", "api", "openapi", "testing", "development"]
categories = ["development-tools", "web-programming", "command-line-utilities"]
exclude = [
    "ui/node_modules/**",
    "ui/dist/**",
    ".github/**",
    "images/**",
    "*.http",
]

[[bin]]
name = "RustMock"
path = "src/bin/server.rs"

[[bin]]
name = "mokku"
path = "src/bin/mokku.rs"

[dependencies]
actix-web = "4.12"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
openapiv3 = "2.2"
clap = { version = "4.5", features = ["derive"] }
inquire = "0.9.1"
colored = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
regex = "1.12"
log = "0.4"
anyhow = "1.0"
open = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
awc = { version = "3.8", default-features = false, features = ["rustls-0_23"] }

[dev-dependencies]
actix-rt = "2.11"
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
